# tomata

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: simple_bot.py
test/: test_emitter.py
tomata/: __init__.py  async_emitter.py  base.py  emitter.py
