[tool.poetry]
name = "tomata"
version = "1.0.3"
description = ""
authors = ["Dmitry Gritsenko <tomata@evtn.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/tomata"
homepage = "https://github.com/evtn/tomata"
keywords = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-asyncio = "^0.21.1"
typing-extensions = "^4.8.0"
pyright = "^1.1.333"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"